# educational-data-prototypes

./: README.md
data-backend/: .dockerignore  .env.example  API_INTEGRATION.md  Dockerfile  create_test_users.py  pyproject.toml  simple_test.py
data-backend/app/: admin.py  admin_schemas.py  auth.py  database.py  main.py  models.py  schemas.py
data-backend/static/: index.html
data-backend/supabase/: config.toml  seed.sql
data-backend/supabase/migrations/: 20250910163619_initial_schema.sql  20250910173000_remove_auth_foreign_keys.sql  20250910180630_make_emails_optional_add_user_metadata.sql  20250911164948_student_app_data_storage.sql
